ethereum-2/beacon-chain/svc-beacon-chain-external.yaml
apiVersion: v1
kind: Service
metadata:
  name: beacon-chain-external
  namespace: ethereum-2
  labels:
    app.kubernetes.io/name: beacon-chain
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: beacon-chain
  ports:
  - name: p2p
    port: 31300
    nodePort: 31300
    targetPort: p2p
  - name: discv5
    port: 31200
    nodePort: 31200
    targetPort: discv5
    protocol: UDP
