ethereum-2/beacon-chain/svc-beacon-chain.yaml
apiVersion: v1
kind: Service
metadata:
  name: beacon-chain
  namespace: ethereum-2
  labels:
    app.kubernetes.io/name: beacon-chain
spec:
  selector:
    app.kubernetes.io/name: beacon-chain
  ports:
  - name: rpc
    port: 4000
    targetPort: rpc
  - name: metrics
    port: 8080
    targetPort: metrics
